# quant-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  routes_admin.py  routes_auth.py  routes_backtests.py  routes_dashboard.py  routes_portfolios.py  routes_strategies.py  routes_trades.py  routes_trading_plan.py
backend/app/backtest_engine/: engine.py  metrics.py  simulator.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: migrations.py  seed.py  session.py
backend/app/domain/: enums.py  models.py
backend/app/dto/: backtests.py  dashboard.py  loc_orders.py  market_data.py  portfolios.py  strategies.py  trades.py  trading_plan.py
backend/app/services/: backtest_service.py  chart_service.py  daily_plan_service.py  dashboard_service.py  exchange_calendar_service.py  fear_greed_service.py  loc_order_service.py  manual_trade_service.py  market_data_service.py  mode_service.py  (+7 more)
backend/tests/: conftest.py  fixtures.py  test_aod.py  test_api_backtests.py  test_api_dashboard.py  test_api_trading_plan.py  test_auth_security.py  test_backtest_engine.py  test_chart_service.py  test_daily_plan_service.py  test_dashboard_service.py  test_dynamic_wave_strategy.py  test_fear_greed_service.py  test_loc.py  test_loc_netting.py  test_loc_order_service.py  test_market_session_service.py  test_migrations.py  test_mode_repository.py  test_mode_service.py  test_repositories.py  test_services.py  test_weekly_cci.py  test_weekly_rsi.py
(+77 files in other folders)
